htmxology-macros/src/route/snapshots/htmxology_macros__route__snapshot_tests__named_single_path_param.snap
---
source: htmxology-macros/src/route/mod.rs
expression: test_route_derive(input)
---
#[allow(unused)]
mod __test {
    use axum::response::IntoResponse as _;
    impl htmxology::Route for MyRoute {
        fn method(&self) -> http::Method {
            match self {
                Self::User { .. } => http::Method::GET,
            }
        }
    }
    impl std::fmt::Display for MyRoute {
        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
            match self {
                Self::User { user_id } => {
                    std::fmt::Write::write_char(f, '/')?;
                    f.write_str("users")?;
                    std::fmt::Write::write_char(f, '/')?;
                    user_id.fmt(f)?;
                }
            };
            Ok(())
        }
    }
    impl std::str::FromStr for MyRoute {
        type Err = htmxology::ParseError;
        fn from_str(__s: &str) -> Result<Self, Self::Err> {
            {
                static RE: std::sync::LazyLock<regex::Regex> = std::sync::LazyLock::new(||
                regex::Regex::new("^/users/(?P<user_id>[^/]+)$").unwrap());
                let (__path, __query_str): (&str, &str) = match __s.split_once('?') {
                    Some((p, q)) => (p, q),
                    None => (__s, ""),
                };
                if let Some(__captures) = RE.captures(__path) {
                    return Ok({
                        let user_id: u32 = __captures
                            .name(stringify!(user_id))
                            .ok_or_else(|| htmxology::ParseError::MissingPathParam {
                                param_name: stringify!(user_id).to_string(),
                            })?
                            .as_str()
                            .parse::<u32>()
                            .map_err(|e| htmxology::ParseError::PathParamParse {
                                param_name: stringify!(user_id).to_string(),
                                value: __captures
                                    .name(stringify!(user_id))
                                    .unwrap()
                                    .as_str()
                                    .to_string(),
                                error: e.to_string(),
                            })?;
                        Self::User { user_id }
                    });
                }
            }
            Err(htmxology::ParseError::NoMatchingRoute {
                url: __s.to_string(),
            })
        }
    }
    impl<S: Send + Sync> axum::extract::FromRequest<S> for MyRoute {
        type Rejection = axum::response::Response;
        async fn from_request(
            __req: axum::extract::Request,
            __state: &S,
        ) -> Result<Self, Self::Rejection> {
            use axum::extract::FromRequestParts;
            {
                static RE: std::sync::LazyLock<regex::Regex> = std::sync::LazyLock::new(||
                regex::Regex::new("^/users/(?P<user_id>[^/]+)$").unwrap());
                if let Some(__captures) = RE.captures(&__req.uri().path()) {
                    return match __req.method() {
                        &http::Method::GET => {
                            Ok({
                                let user_id = htmxology::decode_path_argument(
                                    stringify!(user_id),
                                    &__captures[stringify!(user_id)],
                                )?;
                                Self::User { user_id }
                            })
                        }
                        _ => Err(http::StatusCode::METHOD_NOT_ALLOWED.into_response()),
                    };
                }
            }
            Err(http::StatusCode::NOT_FOUND.into_response())
        }
    }
}
