htmxology-macros/src/route/snapshots/htmxology_macros__route__snapshot_tests__query_and_body_params.snap
---
source: htmxology-macros/src/route/mod.rs
expression: test_route_derive(input)
---
#[allow(unused)]
mod __test {
    use axum::response::IntoResponse as _;
    impl htmxology::Route for MyRoute {
        fn method(&self) -> http::Method {
            match self {
                Self::CreateUser { .. } => http::Method::POST,
            }
        }
    }
    impl std::fmt::Display for MyRoute {
        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
            match self {
                Self::CreateUser { notify, user_data: _ } => {
                    std::fmt::Write::write_char(f, '/')?;
                    f.write_str("users")?;
                    let qs = &serde_html_form::to_string(&notify)
                        .map_err(|_| std::fmt::Error)?;
                    if !qs.is_empty() {
                        std::fmt::Write::write_char(f, '?')?;
                        f.write_str(&qs)?;
                    }
                }
            };
            Ok(())
        }
    }
    impl std::str::FromStr for MyRoute {
        type Err = htmxology::ParseError;
        fn from_str(__s: &str) -> Result<Self, Self::Err> {
            Err(htmxology::ParseError::NoMatchingRoute {
                url: __s.to_string(),
            })
        }
    }
    impl<S: Send + Sync> axum::extract::FromRequest<S> for MyRoute {
        type Rejection = axum::response::Response;
        async fn from_request(
            __req: axum::extract::Request,
            __state: &S,
        ) -> Result<Self, Self::Rejection> {
            use axum::extract::FromRequestParts;
            {
                static RE: std::sync::LazyLock<regex::Regex> = std::sync::LazyLock::new(||
                regex::Regex::new("^/users$").unwrap());
                if let Some(__captures) = RE.captures(&__req.uri().path()) {
                    return match __req.method() {
                        &http::Method::POST => {
                            Ok({
                                let (mut __parts, __body) = __req.into_parts();
                                let axum_extra::extract::Query(notify) = axum_extra::extract::Query::from_request_parts(
                                        &mut __parts,
                                        __state,
                                    )
                                    .await
                                    .map_err(|err| err.into_response())?;
                                let __req = http::Request::from_parts(__parts, __body);
                                let axum_extra::extract::Form(user_data) = axum_extra::extract::Form::from_request(
                                        __req,
                                        __state,
                                    )
                                    .await
                                    .map_err(|err| err.into_response())?;
                                Self::CreateUser {
                                    notify,
                                    user_data,
                                }
                            })
                        }
                        _ => Err(http::StatusCode::METHOD_NOT_ALLOWED.into_response()),
                    };
                }
            }
            Err(http::StatusCode::NOT_FOUND.into_response())
        }
    }
}
