htmxology-macros/src/route/snapshots/htmxology_macros__route__snapshot_tests__unit_variant_get.snap
---
source: htmxology-macros/src/route/mod.rs
expression: test_route_derive(input)
---
#[allow(unused)]
mod __test {
    use axum::response::IntoResponse as _;
    impl htmxology::Route for MyRoute {
        fn method(&self) -> http::Method {
            match self {
                Self::Home => http::Method::GET,
            }
        }
    }
    impl std::fmt::Display for MyRoute {
        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
            match self {
                Self::Home => {
                    std::fmt::Write::write_char(f, '/')?;
                }
            };
            Ok(())
        }
    }
    impl std::str::FromStr for MyRoute {
        type Err = htmxology::ParseError;
        fn from_str(__s: &str) -> Result<Self, Self::Err> {
            {
                static RE: std::sync::LazyLock<regex::Regex> = std::sync::LazyLock::new(||
                regex::Regex::new("^/$").unwrap());
                let (__path, __query_str): (&str, &str) = match __s.split_once('?') {
                    Some((p, q)) => (p, q),
                    None => (__s, ""),
                };
                if let Some(__captures) = RE.captures(__path) {
                    return Ok(Self::Home);
                }
            }
            Err(htmxology::ParseError::NoMatchingRoute {
                url: __s.to_string(),
            })
        }
    }
    impl<S: Send + Sync> axum::extract::FromRequest<S> for MyRoute {
        type Rejection = axum::response::Response;
        async fn from_request(
            __req: axum::extract::Request,
            __state: &S,
        ) -> Result<Self, Self::Rejection> {
            use axum::extract::FromRequestParts;
            {
                static RE: std::sync::LazyLock<regex::Regex> = std::sync::LazyLock::new(||
                regex::Regex::new("^/$").unwrap());
                if let Some(__captures) = RE.captures(&__req.uri().path()) {
                    return match __req.method() {
                        &http::Method::GET => Ok(Self::Home),
                        _ => Err(http::StatusCode::METHOD_NOT_ALLOWED.into_response()),
                    };
                }
            }
            Err(http::StatusCode::NOT_FOUND.into_response())
        }
    }
}
